@@ -4,17 +4,16 @@
  */
 buildscript {
   repositories {
-    mavenLocal()
     jcenter()
+
+    maven {
+      url "https://sandec.bintray.com/repo"
+    }
   }
 
   dependencies {
-    classpath 'com.sandec.jpro:jpro-plugin-gradle:2018.1.10'
+    classpath 'com.sandec.jpro:jpro-plugin-gradle:2019.2.2'
   }
-}
-
-repositories {
-  jcenter()
 }
 
 
@@ -23,30 +22,73 @@ repositories {
  */
 apply plugin: 'java'
 apply plugin: 'application'
+apply plugin: 'com.google.osdetector'
 
 compileJava {
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
+  sourceCompatibility = 11
+  targetCompatibility = 11
 }
+
+repositories {
+  jcenter()
+}
+
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
+
+dependencies {
+  // Add your dependencies here, for example:
+  // compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
+  compile "org.openjfx:javafx-base:14.0.1:$platform"
+  compile "org.openjfx:javafx-graphics:14.0.1:$platform"
+  compile "org.openjfx:javafx-controls:14.0.1:$platform"
+  compile "org.openjfx:javafx-fxml:14.0.1:$platform"
+  compile "org.openjfx:javafx-media:14.0.1:$platform"
+  compile "org.openjfx:javafx-web:14.0.1:$platform"
+}
+
+
+compileJava {
+  doFirst {
+    options.compilerArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.fxml,javafx.controls'
+    ]
+  }
+}
+
+
+run {
+  doFirst {
+    jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.fxml,javafx.controls'
+    ]
+  }
+}
+
 
 /**
  ******************  jpro Configuration ******************
  */
 apply plugin: 'com.sandec.jpro'
 
-jproStartCommand {
-  //jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,address=5006,suspend=y'
-}
 
 /**
  * App Main Class
  */
+//mainClassName = 'com.jpro.hellojpro.HelloJPro'
 mainClassName = 'com.jpro.simplechat.SimpleChatApplication'
 
 /**
  * jpro settings
  */
 jpro {
+  // for debugging
+  // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'
+
+  JVMArgs << '-Xmx1000m'
+
   //jpro server port
   port = 8080
+
 }
